--- a/ProjetoEDOO/front-end/css/estoque.css
+++ b/ProjetoEDOO/front-end/css/estoque.css
@@ -209,10 +209,20 @@ main{
     padding: 12px;
     background-color: white;
     border-radius: 4px;
+    animation: fadeIn 1s ease forwards;
 }
 
 .item p{
     font-size: 12px;
+}
+
+@keyframes fadeIn {
+    from{
+        opacity: 0;
+    } to {
+        opacity: 1;
+          }
+
 }
 
 
@@ -348,6 +358,7 @@ main{
     display: none; /* Inicialmente escondido */
     justify-content: center;
     align-items: center;
+    z-index: 9;
 }
 
 .overlay.add{
