--- a/ProjetoEDOO/front-end/css/estoque.css
+++ b/ProjetoEDOO/front-end/css/estoque.css
@@ -378,7 +378,6 @@ main{
     padding: 16px;
     row-gap: 16px;
     border-radius: 4px;
-    width: 596px;
 
 }
 
@@ -475,24 +474,26 @@ main{
 }
 
 #quant{
-    position: absolute;
-    right: 48px;
-    top: 16px;
-
+    display: flex;
+    gap: 12px;
+    
 }
 
-#quant h3{
-    margin-bottom: 16px;
-    width: 104px;
+#divRadio h3{
+    font-size: 14px;
+    font-weight: 400;
+    
 }
 
 #editar label.radio{
     display: flex;
     flex-direction: row;
-    font-size: 14px;
+    font-size: 12px;
+    font-weight: 500;
     row-gap: 0px;
     margin-bottom: 0px;
-    margin-top: 12px;
+    margin-top: 4px;
+    transform: translateY(-2px) translateX(2px);
 
 
 }
@@ -503,13 +504,12 @@ main{
 
 }
 #editar label.radio:last-child input{
-    margin-left: 7px;
+    margin-left: 8px;
 }
 
 #editar label.text{
     display: flex;
     flex-direction: column;
-    margin-top: 12px;
 
 }
 #editar label.text input{
