--- a/ProjetoEDOO/front-end/css/cardapio.css
+++ b/ProjetoEDOO/front-end/css/cardapio.css
@@ -285,7 +285,7 @@ h2{
     background-color: #569cfd;
 }
 
-#carrinho{
+.carrinho{
     position: absolute;
     top: 0px;
     left: 0px;
@@ -298,8 +298,30 @@ h2{
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    min-height: 748px;
+    animation: carrinho .4s ease forwards;
 
+
+}
+
+@keyframes carrinho {
+    from{
+        transform: translateX(-100%);
+    } to {
+        transform: translateX(0%)
+    }
+}
+
+
+@keyframes carrinhoOut {
+    from{
+        transform: translateX(0%);
+    } to {
+        transform: translateX(-100%)
+    }
+}
+
+.fadeout{
+    animation: carrinhoOut .4s ease forwards;
 }
 
 #carrinhoPratos{
@@ -374,7 +396,7 @@ h2{
     width: 12px;
 }
 
-#carrinho form{
+.carrinho form{
     display: flex;
     flex-direction: column;
     margin-bottom: 24px;
@@ -465,7 +487,7 @@ h2{
 .com{
         width: fit-content !important;
 }
-#carrinho form button{
+.carrinho form button{
     background-color: #388CFF;
     padding: 12px 0px;
     width: 100%;
@@ -476,17 +498,17 @@ h2{
     color: white;
     cursor: pointer;
 }
-#carrinho form button:hover{
+.carrinho form button:hover{
     background-color: #569cfd;
     
 }
 
 #overlayCarrinho{
-    position: absolute;
+    position: fixed;
     top: 0px;
     left: 0px;
     width: 100%;
     height: 100vh;
-    display: flex;
+    display: none;
     z-index: 30;
 }
