--- a/ProjetoEDOO/front-end/css/cardapio.css
+++ b/ProjetoEDOO/front-end/css/cardapio.css
@@ -132,6 +132,16 @@ h2{
     cursor: pointer;
     transition: .5s ease;
     box-shadow: 0px 9px 20.4px 2px rgba(0, 16, 37, 0.10);
+    animation: fadeIn 1s ease forwards;
+}
+
+@keyframes fadeIn {
+    from{
+        opacity: 0;
+    } to {
+        opacity: 1;
+    }
+    
 }
 
 .prato:hover{
@@ -147,7 +157,7 @@ h2{
 }
 
 .prato img{
-    width: 300px;
+    width: 264px;
     border-radius: 4px;
     border-top-left-radius: 0px;
     border-bottom-left-radius: 0px;
