Criei send peididos no server.cpp, corrigi o atributo do tipo de local e criei o layout do pedido na aba de adm. Agora estou trabalhando no js para dispor os elementos na tela

--- a/ProjetoEDOO/front-end/css/estoque.css
+++ b/ProjetoEDOO/front-end/css/estoque.css
@@ -48,6 +48,7 @@ body{
     position: absolute;
     right: 16px;
     bottom: 16px;
+    cursor: pointer;
 }
 .icone p{
     font-size: 12px;
@@ -543,3 +544,4 @@ main{
     top: 139px;
     left: 20px;
 }
+
