--- a/ProjetoEDOO/front-end/css/style.css
+++ b/ProjetoEDOO/front-end/css/style.css
@@ -11,7 +11,7 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed;
     width: 1280px;
-    max-width: 100%;
+    overflow-x: hidden;
     margin: auto;
     height: 100vh;
     
