--- a/ProjetoEDOO/front-end/css/cardapio.css
+++ b/ProjetoEDOO/front-end/css/cardapio.css
@@ -573,3 +573,61 @@ span {
 #cep:focus{
     outline: none;
 }
+
+#overlayConfirmacao{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100vh;
+    display: none;
+    z-index: 30;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.6);
+    animation: fadeIn .5s ease forwards;
+}
+
+#confirmacao{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    padding: 48px;
+    border-radius: 4px;
+    gap: 16px;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+#confirmacao h3{
+    font-size: 28px;
+    font-weight: 500;
+    display: flex;
+    gap: 4px;
+}
+
+#confirmacao button{
+    background-color: #388CFF;
+    padding: 12px 0px;
+    width: 100%;
+    border: none;
+    border-radius: 4px;
+    transition: .2s ease;
+    justify-content: center;
+    color: white;
+    cursor: pointer;
+    font-size: 20px;
+}
+#confirmacao button:hover{
+    background-color: #569cfd;
+    
+}
+
+#xConfirmacao{
+    position: absolute;
+    width: 16px;
+    top: 16px;
+    right: 16px;
+    cursor: pointer;
+}
