--- a/ProjetoEDOO/front-end/css/pedidos.css
+++ b/ProjetoEDOO/front-end/css/pedidos.css
@@ -52,6 +52,7 @@
     padding: 16px 12px;
     border-radius: 4px;
     transition: .2s ease;
+    cursor: pointer;
     
 }
 
@@ -102,7 +103,7 @@
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0.6); /* Preto com 60% de opacidade */
-    display: flex; /* Inicialmente escondido */
+    display: none; /* Inicialmente escondido */
     justify-content: center;
     align-items: center;
     z-index: 9;
