--- a/index.css
+++ b/index.css
@@ -352,19 +352,21 @@ li {
     #autores{
         display: flex;
         gap: 8px;
+        
     }
     
     #autores a{
         font-size: 14px;
         opacity: .8;
+        min-width: auto;
     }
 
     #heroBanner {
         flex-direction: column-reverse;
         max-width: 100%;
         padding: 0px 20px;
-        gap: 24px;
-        height: calc(80vh - 126px);
+        gap: 32px;
+        height: auto;
     }
 
     #heroBanner img{
@@ -377,8 +379,9 @@ li {
         display: flex;
         flex-direction: column;
         justify-content: start;
-        gap: 48px;
+        gap: 24px;
         width: 100%;
+        height: auto;
         
     }
     
@@ -404,7 +407,7 @@ li {
         display: flex;
         flex-wrap: wrap;
         gap: 8px;
-        margin-top: 0px;
+        margin-top: 16px;
         max-width: 100%;
         padding: 0px;
     }
